# Encyclopontus

./: .prettierrc  CNAME  LICENSE  README.md  index.html  knowledge_graph.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
src/: example.html
src/pages/: hand-in-grain.html  home.html  inherently-cool.html  loose-leaves.html  meditation.html  mindful-routines.html  programming.html  rave.html  regrets.html  seeds.html  sociodrink.html  temperance.html  wishlist.html
src/pages/liveography/: liveography.html
src/pages/liveography/abroad-2024/: abroad-2024.html  barcelona-2024.html  berlin-2023.html  madeira-2024.html  porto-2024.html  reflection.html  sprained-ankle.html
src/pages/pontus/: curriculum-vitae-pontus-eriksson.html  curriculum-vitae.html  future-pontus.html  life-stance.html  past-pontus.html  pontus.html  present-pontus.html
src/pages/pontus/life-stance/: veganism.html
src/pages/sociology/: sociodrink.html  sociology.html
src/pages/temperance/: snus.html  temperance.html
src/static/: stylesheet.css
src/styles/: rainbow-hover.css  styles.css
static/: garden_map.html  stylesheet.css
