[tool.poetry]
name = "encyclopontus"
version = "4.2.0"
description = "My Digital Garden"
authors = ["Pontus Eriksson <pontus_eriksson@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
networkx = "^3.3"
pyvis = "^0.3.2"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
